--- a/readme.html
+++ b/readme.html
@@ -559,6 +559,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: The <code>WGLSWAPINTERVALEXT_T</code>, <code>WGLGETEXTENSIONSSTRINGARB_T</code> and <code>WGLGETEXTENSIONSSTRINGEXT_T</code> typedefs were declared under <code>WGL_ARB_pixel_format</code></li>
   <li>[Win32] Bugfix: The array for WGL context attributes was too small and could overflow</li>
   <li>[Win32] Bugfix: Context creation using profiles did not check for the availability of <code>WGL_ARB_create_context_profile</code></li> 
+  <li>[Win32] Bugfix: Context recreation logic was overly conservative, leading to unnecessary recreations</li> 
 </ul>
 
 <h3>v2.7</h3>
