--- a/readme.html
+++ b/readme.html
@@ -550,7 +550,7 @@ version of GLFW.</p>
 <h3>v2.7.1</h3>
 <ul>
   <li>Clarified language in the Reference Manual concerning window hint resetting</li>
-  <li>Bugfix: The OpenGL profile and forward-compatibility window parameters were not loaded after context creation</li>
+  <li>Bugfix: The OpenGL profile and forward-compatibility window parameters were not set</li>
   <li>Bugfix: The default OpenGL version in the <code>version</code> test was set to 1.1</li>
   <li>Bugfix: The FSAA test did not check for the availability of <code>GL_ARB_multisample</code></li>
   <li>Bugfix: The window could be left in a closed state but still be flagged as open</li>
