--- a/readme.html
+++ b/readme.html
@@ -563,6 +563,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: The array for WGL context attributes was too small and could overflow</li>
   <li>[Win32] Bugfix: Context creation using profiles did not check for the availability of <code>WGL_ARB_create_context_profile</code></li> 
   <li>[Win32] Bugfix: Context recreation logic was overly conservative, leading to unnecessary recreations</li> 
+  <li>[Win32] Bugfix: Window focus was not handled correctly when using <code>glfwInconifyWindow</code></li>
 </ul>
 
 <h3>v2.7</h3>
