--- a/readme.html
+++ b/readme.html
@@ -557,6 +557,7 @@ version of GLFW.</p>
   <li>Bugfix: <code>glfwGetWindowSize</code> did not check whether GLFW was initialized or whether the window was open</li>
   <li>[Cocoa] Bugfix: The loop condition for saving video modes used the wrong index variable</li>
   <li>[Cocoa] Bugfix: The iconified and active window states were not tracked</li>
+  <li>[X11] Cleaned up depdendencies for <code>libglfw.pc</code> file</li>
   <li>[X11] Bugfix: The <code>dlopen</code> fallback method for <code>glfwGetProcAddress</code> had been broken by unrelated edits</li>
   <li>[X11] Bugfix: Calling <code>glXCreateContextAttribsARB</code> with an unavailable OpenGL version caused the application to terminate with a <code>BadMatch</code> Xlib error</li>
   <li>[X11] Bugfix: <code>GLFW_WINDOW_NO_RESIZE</code> was honored in fullscreen mode</li>
