Added library version check to dynamic test.

--- a/readme.html
+++ b/readme.html
@@ -548,6 +548,7 @@ version of GLFW.</p>
 
 <h3>v2.7.2</h3>
 <ul>
+  <li>Added library version check to dynamic linking test</li>
 </ul>
 
 <h3>v2.7.1</h3>
