Clarified the need to update the lead section.

--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,7 @@ time input, creating threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release only adds bug fixes for a number of minor issues in 2.7.</p>
+<p>This release <blink>HAS YET TO BE DESCRIBED</blink>.</p>
 
 
 <a name="compiling">
