Fixed entry point retrieval on Cocoa.

--- a/readme.html
+++ b/readme.html
@@ -549,6 +549,7 @@ version of GLFW.</p>
 <h3>v2.7.2</h3>
 <ul>
   <li>Added library version check to dynamic linking test</li>
+  <li>[Cocoa] Bugfix: The OpenGL framework pointer was not retrieved, making glfwGetProcAddress fail</li>
 </ul>
 
 <h3>v2.7.1</h3>
