Initial implementation of Lion GL3 support.

--- a/readme.html
+++ b/readme.html
@@ -549,6 +549,8 @@ version of GLFW.</p>
 <h3>v2.7.2</h3>
 <ul>
   <li>Added library version check to dynamic linking test</li>
+  <li>[Cocoa] Added support for OpenGL 3.2 core profile in 10.7 Lion and above</li>
+  <li>[Cocoa] Made relevant CFLAGS overridable</li>
   <li>[Cocoa] Bugfix: The OpenGL framework pointer was not retrieved, making glfwGetProcAddress fail</li>
 </ul>
 
