--- a/readme.html
+++ b/readme.html
@@ -23,16 +23,17 @@
 <a name="intro">
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7.2 of the GLFW OpenGL framework.  GLFW is a free, open
-source, portable framework for OpenGL application development.  In short, it is
-a library that provides a powerful API for handling operating system specific
-tasks, such as opening an OpenGL window, reading keyboard, mouse, joystick and
-time input, creating threads, and more.</p>
+<p>Welcome to version 2.7.2 of the GLFW library.  GLFW is a free, Open Source,
+multi-platform library for OpenGL application development that provides a
+powerful API for handling operating system specific tasks such as opening an
+OpenGL window, reading keyboard, mouse, joystick and time input, creating
+threads, and more.</p>
 
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release <blink>HAS YET TO BE DESCRIBED</blink>.</p>
+<p>This release brings support for OpenGL 3.2 on OS X Lion and adds a number of
+bug fixes for minor issues in 2.7.1.</p>
 
 
 <a name="compiling">
