Removed drunken rambling with an actual fix for bug #3352963.

--- a/readme.html
+++ b/readme.html
@@ -553,6 +553,7 @@ version of GLFW.</p>
   <li>[Cocoa] Added support for OpenGL 3.2 core profile in 10.7 Lion and above</li>
   <li>[Cocoa] Made relevant CFLAGS overridable</li>
   <li>[Cocoa] Bugfix: The OpenGL framework pointer was not retrieved, making glfwGetProcAddress fail</li>
+  <li>[Cocoa] Bugfix: The Cocoa layer was not notified that the application may be multithreaded</li>
 </ul>
 
 <h3>v2.7.1</h3>
