--- a/readme.html
+++ b/readme.html
@@ -551,8 +551,8 @@ version of GLFW.</p>
 <ul>
   <li>Added library version check to dynamic linking test</li>
   <li>[Cocoa] Added support for OpenGL 3.2 core profile in 10.7 Lion and above</li>
-  <li>[Cocoa] Made relevant CFLAGS overridable</li>
-  <li>[Cocoa] Bugfix: The OpenGL framework pointer was not retrieved, making glfwGetProcAddress fail</li>
+  <li>[Cocoa] Made relevant <code>CFLAGS</code> overridable</li>
+  <li>[Cocoa] Bugfix: The OpenGL framework pointer was not retrieved, making <code>glfwGetProcAddress</code> fail</li>
   <li>[Cocoa] Bugfix: The Cocoa layer was not notified that the application may be multithreaded</li>
 </ul>
 
