Begun work on 2.7.3.

--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1>GLFW 2.7.2 source distribution</h1>
+<h1>GLFW 2.7.3 source distribution</h1>
 
 <ol>
  <li><a href="#intro">Introduction</a></li>
@@ -23,7 +23,7 @@
 <a name="intro">
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7.2 of the GLFW library.  GLFW is a free, Open Source,
+<p>Welcome to version 2.7.3 of the GLFW library.  GLFW is a free, Open Source,
 multi-platform library for OpenGL application development that provides a
 powerful API for handling operating system specific tasks such as opening an
 OpenGL window, reading keyboard, mouse, joystick and time input, creating
@@ -32,8 +32,7 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release brings support for OpenGL 3.2 on OS X Lion and adds a number of
-bug fixes for minor issues in 2.7.1.</p>
+<p>This release is <blink>NOT YET DESCRIBED</blink>.</p>
 
 
 <a name="compiling">
@@ -546,6 +545,11 @@ version of GLFW.</p>
 
 <a name="changelog">
 <h2>5. Version history</h2>
+
+<h3>v2.7.3</h3>
+<ul>
+  <li>[Cocoa] Bugfix: Permitted requests for OpenGL 3.0 and 3.1 despite the 3.2 context being forward-compatible</li>
+</ul>
 
 <h3>v2.7.2</h3>
 <ul>
