Added GLFW_INCLUDE_GL3 from GLFW3.

--- a/readme.html
+++ b/readme.html
@@ -546,6 +546,7 @@ version of GLFW.</p>
 
 <h3>v2.7.3</h3>
 <ul>
+  <li>Added <code>GLFW_INCLUDE_GL3</code> macro for including the new <code>gl3.h</code> instead of <code>gl.h</code></li>
   <li>[X11] Bugfix: Added missing <code>Requires:</code> line to pkg-config file generation</li>
   <li>[X11] Bugfix: Threading link flags were discarded before pkg-config file generation</li>
   <li>[Cocoa] Bugfix: Permitted requests for OpenGL 3.0 and 3.1 despite the 3.2 context being forward-compatible</li>
