Restored synchronization point.

--- a/readme.html
+++ b/readme.html
@@ -550,6 +550,7 @@ version of GLFW.</p>
   <li>[X11] Added the POSIX <code>CLOCK_MONOTONIC</code> time source as the preferred method (backported from 3.0)</li>
   <li>[X11] Bugfix: Added missing <code>Requires:</code> line to pkg-config file generation</li>
   <li>[X11] Bugfix: Threading link flags were discarded before pkg-config file generation</li>
+  <li>[X11] Bugfix: A synchronization point necessary for jitter-free locked cursor mode was incorrectly removed</li>
   <li>[Cocoa] Bugfix: Permitted requests for OpenGL 3.0 and 3.1 despite the 3.2 context being forward-compatible</li>
 </ul>
 
