--- a/readme.html
+++ b/readme.html
@@ -552,6 +552,7 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Threading link flags were discarded before pkg-config file generation</li>
   <li>[X11] Bugfix: A synchronization point necessary for jitter-free locked cursor mode was incorrectly removed</li>
   <li>[Cocoa] Bugfix: Permitted requests for OpenGL 3.0 and 3.1 despite the 3.2 context being forward-compatible</li>
+  <li>[Win32] Replaced Cygwin cross-compile support with MSYS support due to clearer separation between Cygwin and MSYS</li> 
 </ul>
 
 <h3>v2.7.2</h3>
