Refreshed branch from 2.7.3.

--- a/readme.html
+++ b/readme.html
@@ -31,7 +31,7 @@
 <a name="sec1">
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7 <i>Lite</i> of the GLFW OpenGL framework.  GLFW is
+<p>Welcome to version 2.7.3 <i>Lite</i> of the GLFW OpenGL framework.  GLFW is
 a free, open source, portable framework for OpenGL application development.  In
 short, it is a library that constitutes a powerful API for handling operating
 system specific tasks, such as opening an OpenGL window, reading keyboard and
@@ -276,6 +276,11 @@ native version of GLFW.</p>
 
 <a name="sec5" />
 <h2>5. Version history</h2>
+
+<h3>2.7.3 <i>Lite</i></h3>
+<ul>
+  <li>Refreshed from GLFW 2.7.3</li>
+</ul>
 
 <h3>2.7 <i>Lite</i></h3>
 <ul>
