Updated version number to 2.7.4.

--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1>GLFW 2.7.3 source distribution</h1>
+<h1>GLFW 2.7.4 source distribution</h1>
 
 <ol>
  <li><a href="#intro">Introduction</a></li>
@@ -23,7 +23,7 @@
 <a name="intro">
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7.3 of the GLFW library.  GLFW is a free, Open Source,
+<p>Welcome to version 2.7.4 of the GLFW library.  GLFW is a free, Open Source,
 multi-platform library for OpenGL application development that provides a
 powerful API for handling operating system specific tasks such as opening an
 OpenGL window, reading keyboard, mouse, joystick and time input, creating
@@ -32,15 +32,7 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release replaces Cygwin cross-compilation with better MinGW and MSYS
-support, adds support for POSIX monotonic timers, adds the
-<code>GLFW_INCLUDE_GL3</code> to make GLFW include the draft <code>gl3.h</code>
-header instead of <code>gl.h</code> and fixes a number of bugs.</p>
-
-<p>At the time of this release, the draft <code>gl3.h</code> header is by
-default only available on OS X Lion.  Until it is included in other development
-environments, it can be downloaded from the
-<a href="http://www.opengl.org/registry/">OpenGL Registry</a>.</p>
+<p>This release <blink><big>IS NOT YET DESCRIBED</big></blink>.</p>
 
 
 <a name="compiling">
@@ -577,6 +569,10 @@ version of GLFW.</p>
 
 <a name="changelog">
 <h2>5. Version history</h2>
+
+<h3>v2.7.4</h3>
+<ul>
+</ul>
 
 <h3>v2.7.3</h3>
 <ul>
