--- a/readme.html
+++ b/readme.html
@@ -572,6 +572,7 @@ version of GLFW.</p>
 
 <h3>v2.7.4</h3>
 <ul>
+  <li>[Cocoa] Bugfix: <code>glfwInit</code> changed the current directory without a bundle resource directory (backported from 3.0)</li>
 </ul>
 
 <h3>v2.7.3</h3>
