Fixed GLFW_WINDOW_NO_RESIZE state not being saved.

--- a/readme.html
+++ b/readme.html
@@ -572,8 +572,11 @@ version of GLFW.</p>
 
 <h3>v2.7.4</h3>
 <ul>
+  <li>[Cocoa] Bugfix: The <code>GLFW_WINDOW_NO_RESIZE</code> window parameter was always zero</li>
   <li>[Cocoa] Bugfix: <code>glfwInit</code> changed the current directory without a bundle resource directory (backported from 3.0)</li>
   <li>[Cocoa] Bugfix: <code>glfwInit</code> created a non-interactive menu bar (backported from 3.0)</li>
+  <li>[Carbon] Bugfix: The <code>GLFW_WINDOW_NO_RESIZE</code> window parameter was always zero</li>
+  <li>[Win32] Bugfix: The <code>GLFW_WINDOW_NO_RESIZE</code> window parameter was always zero</li>
 </ul>
 
 <h3>v2.7.3</h3>
