Added release description.

--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,12 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release <blink><big>IS NOT YET DESCRIBED</big></blink>.</p>
+<p>This release adds bug fixes for a few minor issues in 2.7.3, most notably the
+missing <code>-lrt</code> on X11 and the non-interactive menu bar created by
+<code>glfwInit</code> on Mac OS X.</p>
+
+<p>For a full list of changes, see the
+<a href="#changelog">version history</a>.</p>
 
 
 <a name="compiling">
