--- a/readme.html
+++ b/readme.html
@@ -330,7 +330,7 @@ code.</p>
 
 <p>However, if you're a *nix distribution packager, use a language binding or
 for some other reason wish to install the shared library along with the rest,
-run make with the <code>x11-distro-install</code> target.</p>
+run make with the <code>x11-dist-install</code> target.</p>
 
 
 <h3>3.4 Mac OS X</h3>
