HTML structure fix.

--- a/readme.html
+++ b/readme.html
@@ -1071,9 +1071,8 @@ version of GLFW.</p>
 <a name="structure">
 <h2>6. Directory structure of the GLFW distribution</h2>
 
-<p>Here is an overview of the directory structure of the GLFW distribution:
+<p>Here is an overview of the directory structure of the GLFW distribution:</p>
 
-<p>
 <table border=0 cellspacing=0>
 <tr valign="top"><td width=100><code>docs</code></td><td>&nbsp;</td><td>GLFW manuals in PDF format</td></tr>
 <tr valign="top"><td><code>examples</code></td><td>&nbsp;</td><td>Several example programs in C</td></tr>
