HTML structure fixes.

--- a/readme.html
+++ b/readme.html
@@ -20,7 +20,7 @@
  <li><a href="#credits">Acknowledgements</a></li>
 </ol>
 
-<a name="intro">
+<a name="intro"></a>
 <h2>1. Introduction</h2>
 
 <p>Welcome to version 2.7.4 of the GLFW library.  GLFW is a free, Open Source,
@@ -40,7 +40,7 @@ missing <code>-lrt</code> on X11 and the non-interactive menu bar created by
 <a href="#changelog">version history</a>.</p>
 
 
-<a name="compiling">
+<a name="compiling"></a>
 <h2>2. Compiling GLFW and the example programs</h2>
 
 <p>A top level makefile can be found in the root directory of the GLFW
@@ -275,7 +275,7 @@ need to build applications for those systems, it is a better choice than
 the Cocoa port, which uses APIs unavailable on systems older than 10.5.</p>
 
 
-<a name="installing">
+<a name="installing"></a>
 <h2>3. Installing GLFW</h2>
 
 <h3>3.1 Windows</h3>
@@ -355,7 +355,7 @@ should think twice before using it. GLFW is very small and very suitable for
 static linking. The GLFW license also allows static linking without requiring
 your to share your code.</p>
 
-<a name="using">
+<a name="using"></a>
 <h2>4. Using GLFW</h2>
 
 <p>There are two aspects to using GLFW:</p>
@@ -572,7 +572,7 @@ that even though your machine may have Unix-style OpenGL libraries, they are for
 use with the X Window System, and will <em>not</em> work with the Mac OS X native
 version of GLFW.</p>
 
-<a name="changelog">
+<a name="changelog"></a>
 <h2>5. Version history</h2>
 
 <h3>v2.7.4</h3>
@@ -1068,7 +1068,7 @@ version of GLFW.</p>
 </ul>
 
 
-<a name="structure">
+<a name="structure"></a>
 <h2>6. Directory structure of the GLFW distribution</h2>
 
 <p>Here is an overview of the directory structure of the GLFW distribution:</p>
@@ -1091,7 +1091,7 @@ version of GLFW.</p>
 </table>
 
 
-<a name="contact">
+<a name="contact"></a>
 <h2>7. Contacting the project</h2>
 
 <p>The official website for GLFW is <a href="http://www.glfw.org/">glfw.org</a>.
@@ -1115,7 +1115,7 @@ GLFW or porting it to your favorite platform, we have a
 or you could join us on <code>#glfw</code>.
 
 
-<a name="credits">
+<a name="credits"></a>
 <h2>8. Acknowledgements</h2>
 
 <p>GLFW exists because people around the world donated their time and lent
