--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1>GLFW 2.7.4 source distribution</h1>
+<h1>GLFW 2.7.5 source distribution</h1>
 
 <ol>
  <li><a href="#intro">Introduction</a></li>
@@ -23,7 +23,7 @@
 <a name="intro"></a>
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7.4 of the GLFW library.  GLFW is a free, Open Source,
+<p>Welcome to version 2.7.5 of the GLFW library.  GLFW is a free, Open Source,
 multi-platform library for OpenGL application development that provides a
 powerful API for handling operating system specific tasks such as opening an
 OpenGL window, reading keyboard, mouse, joystick and time input, creating
@@ -32,9 +32,7 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release adds bug fixes for a few minor issues in 2.7.3, most notably the
-missing <code>-lrt</code> on X11 and the non-interactive menu bar created by
-<code>glfwInit</code> on Mac OS X.</p>
+<p>This release is <blink>NOT YET DESCRIBED</blink>.</p>
 
 <p>For a full list of changes, see the
 <a href="#changelog">version history</a>.</p>
@@ -574,6 +572,11 @@ version of GLFW.</p>
 
 <a name="changelog"></a>
 <h2>5. Version history</h2>
+
+<h3>v2.7.5</h3>
+<ul>
+  <li>[Cocoa] Bugfix: <code>MAXPATHLEN</code> was not declared on some systems</li>
+</ul>
 
 <h3>v2.7.4</h3>
 <ul>
