Added mach_absolute_time time source.

--- a/readme.html
+++ b/readme.html
@@ -575,6 +575,7 @@ version of GLFW.</p>
 
 <h3>v2.7.5</h3>
 <ul>
+  <li>[Cocoa] Replaced <code>NSDate</code> time source with <code>mach_absolute_time</code> (backported from 3.0)</li>
   <li>[Cocoa] Bugfix: <code>MAXPATHLEN</code> was not declared on some systems</li>
 </ul>
 
