Clarified change log entry.

--- a/readme.html
+++ b/readme.html
@@ -576,7 +576,7 @@ version of GLFW.</p>
 <h3>v2.7.5</h3>
 <ul>
   <li>[Cocoa] Replaced <code>NSDate</code> time source with <code>mach_absolute_time</code> (backported from 3.0)</li>
-  <li>[Cocoa] Bugfix: <code>MAXPATHLEN</code> was not declared on some systems</li>
+  <li>[Cocoa] Bugfix: A header needed for <code>MAXPATHLEN</code> on some systems was not included</li>
 </ul>
 
 <h3>v2.7.4</h3>
