--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,8 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release is <blink>NOT YET DESCRIBED</blink>.</p>
+<p>This release fixes a compilation bug for certain versions of Mac OS X and
+adds a backport of the GLFW 3 time source for Cocoa.</p>
 
 <p>For a full list of changes, see the
 <a href="#changelog">version history</a>.</p>
