--- a/readme.html
+++ b/readme.html
@@ -575,6 +575,7 @@ version of GLFW.</p>
 
 <h3>v2.7.6</h3>
 <ul>
+  <li>[Win32] Bugfix: A test was missing for whether all available pixel formats had been disqualified</li>
 </ul>
 
 <h3>v2.7.5</h3>
