Added workaround for VirtualBox GL.

--- a/readme.html
+++ b/readme.html
@@ -581,6 +581,7 @@ version of GLFW.</p>
 <h3>v2.7.6</h3>
 <ul>
   <li>[Win32] Bugfix: A test was missing for whether all available pixel formats had been disqualified</li>
+  <li>[X11] Bugfix: The VirtualBox OpenGL implementation does not set the window bit for GLXFBConfigs</li>
 </ul>
 
 <h3>v2.7.5</h3>
