Added Cocoa joystick support credits.

--- a/readme.html
+++ b/readme.html
@@ -1219,6 +1219,9 @@ their skills.  Special thanks go out to:</p>
 
   <li>Johannes Stein, for maintaining the Pascal bindings</li>
 
+  <li>Sergey Tikhomirov, for the initial implementation of joystick support on
+  Mac OS X</li>
+
   <li>Samuli Tuomola, for support, bug reports and testing</li>
 
   <li>Frank Wille, for helping with the AmigaOS port and making GLFW
