--- a/readme.html
+++ b/readme.html
@@ -584,7 +584,7 @@ version of GLFW.</p>
   <li>[Cocoa] Added new joystick test (backported from 3.0)</li>
   <li>[Cocoa] Bugfix: Fullscreen windows with OpenGL 3.2 core contexts failed to open</li>
   <li>[Win32] Bugfix: A test was missing for whether all available pixel formats had been disqualified</li>
-  <li>[X11] Bugfix: The VirtualBox OpenGL implementation does not set the window bit for GLXFBConfigs</li>
+  <li>[X11] Bugfix: The VirtualBox OpenGL implementation does not set the window bit for GLX framebuffer configs</li>
 </ul>
 
 <h3>v2.7.5</h3>
